Fixed bug #40259 (ob_start call many times - memory error). (Dmitry)